...
                // Enqueued
                if skipEnabled {
                    Button {
                        selectedCardModel.clearSelection()
                        card.skip(at: Date())
                    } label: {
                        Label("Skip", systemImage: "forward.fill")
                    }
                    .tint(.orange)
                }
                
                // Remove from queue (works for all card types)
                Button {
...
                .tint(.purple)
                
                Button {
                    selectedCardModel.clearSelection()
                    card.archive(at: Date())
                } label: {
                    Label("Archive", systemImage: "archivebox")
                }
                .tint(.secondary)

                // Card type specific actions
                switch cardType {
                case .flashcard:
...
                        if card.isComplete {
                            card.markAsNotComplete(at: .now)
                        } else {
                            card.markAsComplete(at: .now)
                        }
                    }) {
                        Label(card.isComplete ? "Incomplete" : "Complete", systemImage: card.isComplete ? "checkmark.circle" : "checkmark.circle.fill")
            
                    }
                    .tint(card.isComplete ? .orange : .green)
                
                default:
                    EmptyView()
...
